Tidying for next sub

--- a/docs/write_up/SupplementaryTablesandFigures.tex
+++ b/docs/write_up/SupplementaryTablesandFigures.tex
@@ -49,7 +49,7 @@
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO1"}
 \end{subfigure}
 \caption{Left: Average spatial encounter probability factor 1 values correlated
-	against; Left - Depth, Right - substrate type}
+	against; Left - Depth, Right - substrate type.}
 
 \end{figure}
 
@@ -65,7 +65,7 @@
 	\includegraphics[width = \linewidth]{"figures/Factor1_HabitatO2"}
 \end{subfigure}
 \caption{Left: Average spatial positive density factor 1 values correlated
-	against; Left- Depth, Right- substrate type}
+	against; Left- Depth, Right- substrate type.}
 
 \end{figure}
 
@@ -77,7 +77,7 @@
 \begin{subfigure}{0.45\textwidth}
 \includegraphics[width = \linewidth]{"figures/Substrate"}
 \end{subfigure}
-\caption{Left: Depth, Right: Substrate assigned to each spatial knot}
+\caption{Left: Depth, Right: Substrate assigned to each spatial knot.}
 
 \end{figure}
 
@@ -88,7 +88,7 @@
 	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon1"}
 	\label{fig:S5}
 	\caption{Spatial Loadings for first three factors every five years for
-	spatio-temporal encounter probability}
+	spatio-temporal encounter probability.}
 	\end{center}
 \end{figure}
 
@@ -97,7 +97,7 @@
 	\includegraphics[width = 0.8\linewidth]{"figures/Suppl - SpatioTempLoadingsEpsilon2"}
 	\label{fig:S7}
 	\caption{Spatial Loadings for first three factors every five years for
-	spatio-temporal density}
+	spatio-temporal density.}
 	\end{center}
 \end{figure}
 
@@ -108,7 +108,7 @@
 	\label{fig:S6}
 	\caption{Association of temperature and knots (individual lines; top)
 		with Spatio-temporal factor loadings for encounter probability
-	(middle) and density (bottom)}
+	(middle) and density (bottom).}
 	\end{center}
 \end{figure}
 
@@ -119,10 +119,10 @@
 	\includegraphics[width = \linewidth]{"figures/Suppl - Epsilon1Epsilon2_Correlations_blank"}
 	\label{fig:S8}
 	\caption{Inter-species correlations for (a) spatio-temporal encounter
-		probability and b) spatio-temporal density.  Species-groups are
+		probability and b) spatio-temporal density. Species are
 		clustered into three groups based on a hierarchical clustering
-		method with non-significant correlations (those where the
-		Confidence Interval spanned zero) left blank}
+		method with non-significant correlations (the Confidence
+		Interval [$\pm$ 1.96 * SEs] spanned zero) left blank.}
 	\end{center}
 \end{figure}
 
@@ -130,7 +130,7 @@
 \begin{center}
 	\includegraphics[width = 0.9\linewidth]{"figures/AreaMap"}
 	\label{fig:S9}
-	\caption{Spatial bounds of case study area}
+	\caption{Spatial bounds of case study area.}
 	\end{center}
 \end{figure}
 
@@ -140,7 +140,7 @@
 	\label{fig:S10}
 	\caption{Estimates of distances at 10 \% correlation from the Matérn
 		covariance function for encounter probability and positive
-		catch rates}
+		catch rates.}
 	\end{center}
 \end{figure}
 
@@ -149,8 +149,10 @@
 \begin{center}
 	\includegraphics[width = 0.9\linewidth]{"figures/Suppl - QEstimatesALL"}
 	\label{fig:S11}
-	\caption{Fixed effect estimates for surveys for each species-group. Note
-	all values within a species-group are relative to the CEXP survey}
+	\caption{Fixed effect estimates for surveys for each species-group.
+		Point estimate as a circle with $\pm$1.96 x SE shown as a line.
+		Note all values within a species-group are relative to the CEXP
+		survey.}
 	\end{center}
 \end{figure}
 
@@ -159,7 +161,7 @@
 	\includegraphics[width = 0.9\linewidth]{"figures/Diag--Encounter_prob"}
 	\label{fig:S12}
 	\caption{Model diagnostics output showing correlation between the
-		predicted encounter probability and the data}
+		predicted encounter probability and the data.}
 	\end{center}
 \end{figure}
 
@@ -168,7 +170,7 @@
 	\includegraphics[width = 0.9\linewidth]{"figures/Q-Q_plot"}
 	\label{fig:S13}
 	\caption{Model diagnostics output showing the Q-Q plot for the positive
-	catch rates}
+	catch rates.}
 	\end{center}
 \end{figure}
 
@@ -178,13 +180,13 @@
 	\label{fig:S14}
 	\caption{Comparison between the standardised index from the VAST
 		output and the standardised spawning stock biomass (SSB) from
-		the assessments for cod, haddock and whiting}
+		the assessments for cod, haddock and whiting.}
 	\end{center}
 \end{figure}
 
 %% Tables %%
 \begin{table}[!ht]
-	\caption{List of survey codes, names and brief description}
+	\caption{List of survey codes, names and brief description.}
 	\center
 	\begin{tabular}{ p{3cm} p{4cm} p{4cm} p{3cm} }
 		\hline
@@ -205,7 +207,7 @@
 
 \begin{table}[!ht]
 	\caption{List of species codes, names and minimum conservation
-		reference size used to separate juvenile and adult fish}
+		reference size used to separate juvenile and adult fish.}
 	\center
 	\begin{tabular}{ p{3cm} p{4cm} p{6cm} p{2cm} }
 		\hline
@@ -240,7 +242,7 @@
 
 
 \begin{table}[!ht]
-	\caption{Description of model variants and AIC / BIC }
+	\caption{Description of model variants and AIC / BIC.}
 	\begin{tabular} { {p}{1cm} p{4cm} p{2cm} p{2cm} p{2cm} p{2cm} }
 		\hline
 		Model & Description & No fixed parameters & No random
