Added data availability section

--- a/docs/write_up/JDM_mixed_fishery.tex
+++ b/docs/write_up/JDM_mixed_fishery.tex
@@ -676,6 +676,12 @@ size classes (adult and juvenile).
 The final dataset comprised of estimates of catches (including zeros) for each
 station and species and estimated swept area for the tow.
 
+\subsection{Data availability}
+
+Data used to fit the model is available via the ICES Datras data portal
+(\url{http://www.ices.dk/marine-data/data-portals/Pages/DATRAS.aspx}) for two
+surveys and on request to the author for the remaining five surveys.
+
 \subsection{Model setup}
 
 The spatial domain was setup to include 250 knots representing the Gaussian
