Updates for Nature SciReports checks

--- a/docs/write_up/Nature_SciReports/SpatialMixedFishery.tex
+++ b/docs/write_up/Nature_SciReports/SpatialMixedFishery.tex
@@ -388,21 +388,20 @@ species is likely to occur? To address this requirement, we map the difference
 in spatial distribution within a group for each pair of species within a
 species-groupings for a single year (2015; Figure 4). \\
 
-Cod had a more north-westerly distribution than
-haddock, while cod was more westerly distributed than whiting roughly
-delineated by the 7$^{\circ}$ W line (Figure 4a). Whiting appeared particularly
-concentrated in an area between 51 and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$
-W, which can be seen by comparing the whiting distribution with both cod
-(Figure 4b) and haddock (Figure 4c). For the deeper water species (Figures 4d
-and 4e), hake are more densely distributed in two areas compared to
-anglerfishes\footnote{two species combined as they are managed as one} and
-megrim (though megrim has a stable density across the modelled area as
-indicated by the large amount of white space). For anglerfishes and megrim
-(Figure 4f), anglerfishes have a more easterly distribution than megrim. For
-the flatfish species plaice and sole (Figure 4g), plaice appear to be more
-densely distributed along the coastal areas of Ireland and Britain, while sole
-are more densely distributed in the Southern part of the English Channel along
-the coast of France.\\
+Cod had a more north-westerly distribution than haddock, while cod was more
+westerly distributed than whiting roughly delineated by the 7$^{\circ}$ W line
+(Figure 4a). Whiting appeared particularly concentrated in an area between 51
+and 52 $^{\circ}$ N and 5 and 7 $^{\circ}$ W, which can be seen by comparing
+the whiting distribution with both cod (Figure 4b) and haddock (Figure 4c). For
+the deeper water species (Figures 4d and 4e), hake are more densely distributed
+in two areas compared to the anglerfish species (which are combined as they are
+jointly managed) and megrim (though megrim has a stable density across the
+modelled area as indicated by the large amount of white space). For
+anglerfishes and megrim (Figure 4f), anglerfishes have a more easterly
+distribution than megrim. For the flatfish species plaice and sole (Figure 4g),
+plaice appear to be more densely distributed along the coastal areas of Ireland
+and Britain, while sole are more densely distributed in the Southern part of
+the English Channel along the coast of France.\\
 
 Predicted catch distribution from a ``typical'' otter trawl gear and beam trawl
 fishing at three different locations highlights the differences fishing gear
@@ -796,7 +795,8 @@ Correspondence and requests for materials should be addressed to Paul Dolder
 	\label{fig:2}
 	\caption{Position of each species on the first two axes from the
 		factor analysis for (a) spatio-temporal encounter probability
-		and (b) spatio-temporal positive density.}
+		and (b) spatio-temporal positive density. Fish images from The
+	Fisherman/Shutterstock.com and Richard Griffin/Shutterstock.com.}
 \end{center}
 \end{figure}
 
